<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grinLG" >

    <TableLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/headerbox"
        android:stretchColumns="1"
        android:shrinkColumns="0">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/title"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:typeface="serif" 
                android:padding="7dp"
                android:paddingTop="12dp"
                android:paddingRight="0dp"
                 android:textScaleX="1.17"
                />

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/empty"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:typeface="serif" 
                android:layout_gravity="right"
                android:padding="3dp"
                android:paddingLeft="0dp"
                android:paddingRight="7dp"
                />
            
                <LinearLayout
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent"
        android:minWidth="7dp"
        android:orientation="horizontal" >
    </LinearLayout>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@android:color/black"
        android:minHeight="1dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/grinGrey"
        android:orientation="horizontal"
        android:paddingTop="0dp" >

        <Button
            android:id="@+id/breakfastButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:padding="3dp"
            android:text="@string/breakfast"
            android:textColor="@android:color/white"
            android:typeface="serif" />

        <Button
            android:id="@+id/lunchButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:padding="3dp"
            android:text="@string/lunch"
            android:textColor="@android:color/white"
            android:typeface="serif" />

        <Button
            android:id="@+id/dinnerButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:padding="3dp"
            android:text="@string/dinner"
            android:textColor="@android:color/white"
            android:typeface="serif" />

        <Button
            android:id="@+id/outtakesButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:padding="3dp"
            android:text="@string/outtakes"
            android:textColor="@android:color/white"
            android:typeface="serif" />
    </LinearLayout>


    <ExpandableListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/line"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="0dp"
        android:background="@color/grinGrey"
        android:groupIndicator="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        android:saveEnabled="true" >
    </ExpandableListView>
    



</RelativeLayout>